# OntoConv

./: .gitignore  .pre-commit-config.yaml  .run-mypy  README.md  pyproject.toml
.github/workflows/: ci_tests.yml
examples/: pipeline_0.yaml  pipeline_1.yaml  workchain.yaml
ontoconv/: __init__.py  attrdict.py  ontoflow.py  pipelines.py  testutils.py
tests/: do_not_test_2_generate_pipeline.py  paths.py  test_1_populate_kb.py  test_2_generate_pipeline.py  test_3_generate_workchain.py  test_ontoflow_to_execflow.py
tests/expected/: generated_pipeline_1.yaml  generated_pipeline_2.yaml  generated_pipeline_3.yaml  generated_workchain.yaml  pipeline_1.yaml  pipeline_final.yaml  workchain.yaml
tests/facit/: pipeline_abaqus_input.yml  pipeline_abaqus_output.yml
tests/input/: SS3kb.ttl  datadoc.yml  resources.yaml  testflow.yaml
