[project]
name = "ontoconv"
description = "Tool connecting OntoFlow to ExecFlow."
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Natural Language :: English",
    "Operating System :: OS Independent",
]
keywords = ["OpenModel", "OntoFlow", "ExecFlow", "workflow"]
requires-python = "~=3.8"
dynamic = ["version"]
dependencies = [
    #"OntoFlow @ git+https://github.com/H2020-OpenModel/OntoFlow",
    #"ExecFlow @ git+https://github.com/H2020-OpenModel/ExecFlow",
    #"tripper >=0.2.15,<1",
    "tripper @ git+https://github.com/EMMC-ASBL/tripper",
    "rdflib ~=7.0",
    "pyyaml ~=6.0",
    "oteapi-core >=0.6.1,<0.7",
    "otelib >=0.4.1,<0.5",
]

[project.optional-dependencies]
docs = []
pre-commit = [
    "pre-commit ~=2.21",
    "pylint ~=2.13",
]
testing = [
    "pytest ~=7.4",
    "pytest-cov ~=4.1",
]
dev = [
    "pre-commit ~=2.21",
    "pylint ~=2.13",
    "pytest ~=7.4",
    "pytest-cov ~=4.1",
]

[project.urls]
Home = "https://github.com/H2020-OpenModel/OntoConv"
Source = "https://github.com/H2020-OpenModel/OntoConv"
"Issue Tracker" = "https://github.com/H2020-OpenModel/issues"
#Documentation = "https://H2020-OpenModel.github.io/OntoConv"
#Changelog = "https://github.com/H2020-OpenModel/OntoConv/blob/master/CHANGELOG.md"
#Package = "https://pypi.org/project/ontoconv"

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[tool.isort]
line_length = 79  # PEP8

[tool.black]
line-length = 79

[tool.mypy]
python_version = "3.8"
ignore_missing_imports = false
scripts_are_modules = true
warn_unused_configs = true
show_error_codes = true
allow_redefinition = true

[tool.pylint]
max-line-length = 79
max-args = 10
max-public-methods = 25
max-locals = 20
disable = [
    "fixme",
    "invalid-name",
]
good-names = [
    # Default
    "i", "j", "k", "ex", "Run", "_",
    # Triplestore instance
    "ts",
    # Triple components: subject, predicate, object
    "s", "p", "o",
]

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-rs --cov=tripper --cov-report=term --doctest-modules"
filterwarnings = [
    "ignore:.*imp module.*:DeprecationWarning",
]
